# cloode_solver

./: .dockerignore  .env.example  .env.production  .env.security  .env.security.example  .gitignore  .mcp-config.json  .mcp.json  .ruffignore  CLAUDE.md  COMPREHENSIVE_INTEGRATION_REPORT.md  DEPARTMENT_FORM_PERFORMANCE_REPORT.md  FORM_PERFORMANCE_IMPLEMENTATION_REPORT.md  GUI_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  JOBTEMPLATE_PERFORMANCE_IMPLEMENTATION.md  Makefile  NETLIFY_MCP.md  README.md  SCHEMA_ALIGNMENT_PLAN.md  SCHEMA_ANALYSIS_REPORT.md  SECURITY_ACTIVATION_REPORT.md  SECURITY_IMPLEMENTATION_REPORT.md  SEQUENCE_RESOURCE_FORM_PERFORMANCE_IMPLEMENTATION.md  SKILLFORM_PERFORMANCE_IMPLEMENTATION_REPORT.md  check_accessible_tables.py  check_all_job_tables.js  check_job_templates.js  create_complete_csvs.py  debug_gui.js  debug_tables.py  final_security_report.json  fix_database_schema.sql  gemini.bbaiworksheet  gui_app.py  netlify.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  (+13 more)
.bmad-core/: install-manifest.yaml
.claude/: COMMANDS.md  COMMAND_EXAMPLES.md  CONTEXT.md  DEVELOPMENT.md  HOOK_INTEGRATION_GUIDE.md  ORTOOLS_COMMANDS_FINAL.md  PROMPTS.md  STANDARDS.md  TEMPLATES.md  TROUBLESHOOTING.md  USER_QUICK_START.md  WORKFLOWS.md  demo_agent_integration.py  demo_enhanced_commands.py  demo_simple.py  hooks.json  mcp.json  package-lock.json
.claude/agents/: ortools-database-architect.md  ⋌༼ •̀ ⌂ •́ ༽⋋ Ortools Model Expert.md  ⋌༼ •̀ ⌂ •́ ༽⋋ Sir Ort Rosenberg, the Ortools Expert.md
.claude/commands/: commands.md  context.md  ortools_commands.py  prompts.md  standards.md  templates.md  workflows.md
.claude/examples/: CONSTRAINT_IMPLEMENTATIONS.md
.claude/hooks/: __init__.py  (+6 more)
.devcontainer/: Dockerfile
.netlify/: state.json
backups/: migration_backup_1754046721.json  migration_backup_1754151149.json
config/: database_security_config.py
docs/: API_REFERENCE.md  DATABASE_SECURITY_IMPLEMENTATION.md  PRODUCTION_ENHANCEMENTS.md  RLS_IMPLEMENTATION.md  SETUP_TEST_DATA.md  phase3-completion-summary.md  utilizing_personas.md
examples/: complete_template_workflow.py  high_capacity_demo_simple.py  phase3_lexicographic_demo.py  setup_time_demo.py  template_scheduling_example.py  trade_off_visualization_demo.py
frontend/: .env.example  IMPLEMENTATION.md  PHASE_2_MIGRATION_GUIDE.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_MAINTAINABILITY_REFACTOR.md  PHASE_3_PROGRESS_REPORT.md  auto-upload.js  complete-upload.js  instrumentation.ts  jobs_corrected.csv  machines_upload.csv  manual-upload.js  next.config.js  operators_upload.csv  package.json  playwright.config.js  simple-browser.js  skills_upload.csv  tasks_corrected.csv  tasks_fixed.csv  tasks_upload.csv  template_precedences_corrected.csv  tsconfig.json  typescript-error-report.json  work_cells_upload.csv
gui/: .env.development  .env.example  .env.production  .gitignore  .markdownlint.json  .prettierrc  CLAUDE.md  DEPARTMENT_CONCEPTS.md  FINAL_GUI_INSPECTION_REPORT.md  FINAL_TEST_REPORT.md  GUI_FIXES_SUMMARY.md  GUI_README.md  LICENSE  PLAYWRIGHT_TEST_REPORT.md  SEQUENCE_RESOURCE_CONCEPTS.md  TERMINOLOGY_MIGRATION_PLAN.md  TESTING.md  WorkCellForm_FIXED.tsx  analyze_schema.js  check_actual_schema.js  check_database_tables.js  comprehensive_gui_test.js  console-error-report.json  create_job_optimized_patterns.sql  debug_departments_form.js  debug_form_elements.js  debug_initial_load_errors.js  debug_job_template_error.js  debug_maintenance_types_dom.js  debug_operators_specific.js  debug_real_errors.js  debug_setup_tables.js  documentation_lint_report.md  form_issues_test.js  future_planning_gui.md  gui_forms.py  inspect_database_schema.js  list_all_tables.js  next.config.js  package.json  (+37 more)
migrations/: 000_create_test_tables.sql  001_initial_rls_setup.sql  002_migrate_to_template_schema.sql  003_add_auth_and_rls_foundation.sql  004_create_job_tasks_table.sql  complete_test_setup.sql
netlify_upload/: CORRECTED_UPLOAD_ORDER.md  UPLOAD_ORDER.md  business_calendars.csv  create_job_template_first.txt  departments.csv  holiday_calendar.csv  job_instances.csv  job_instances_corrected.csv  job_instances_final.csv  job_instances_for_gui_test.csv  job_instances_ob3_mfg.csv  job_pattern_templates.csv  job_test_single.csv  machines.csv  machines_minimal.csv  maintenance_types.csv  sequences.csv  skills.csv  task_modes.csv  task_skill_requirements.csv  template_precedences.csv  template_tasks.csv  work_cells.csv
reports/: migration_report_1754046608.txt  migration_report_1754046660.txt  migration_report_1754046716.txt  migration_report_1754046721.txt  migration_report_1754046731.txt  migration_report_1754151130.txt  migration_report_1754151150.txt  security_test_results_1754046925.json  security_test_results_1754047491.json  security_test_results_1754047677.json  security_test_results_1754150709.json  security_test_results_1754150841.json
schema/: auth_and_rls_foundation.sql  complete_solver_schema.sql  optimized_solver_schema.sql  template_solver_schema.sql
scripts/: .ruffignore  apply_initial_rls.py  apply_rls_migration.py  apply_security_migration.py  comprehensive_security_verification.py  dev_workflow.py  final_security_check.py  generate_complete_sql.py  generate_form.py  manual_security_migration.py  performance_monitor.py  populate_template_test_data.py  production_integration_demo.py  quick_benchmark.py  run_mcp_production_solver.py  run_production_solver.py  run_security_tests.py  security_migration.py  setup_supabase_test_data.py  test_performance_monitoring.js  test_performance_monitoring.ts  validate_template_performance.py  verify_rls_status.py
supabase/: config.toml
supabase_data/: cell_mappings.csv  holiday_calendar.csv  jobs.csv  labor_skills.csv  mode_code_mappings.csv  resource_mappings.csv  resources.csv  skill_mappings.csv  skills.csv  task_code_mappings.csv  task_mode_resource_requirements.csv  task_mode_resource_requirements_corrected.csv  task_modes.csv  task_precedences.csv  task_sequences.csv  task_skill_requirements.csv  tasks.csv  work_cells.csv
tests/: conftest.py
(+723 files in other folders)
