[project]
name = "modular-solver"
version = "0.1.0"
description = "A modular scheduling optimization solver"
authors = [{ name = "Dev Team" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
name = "modular-solver"
version = "0.1.0"
description = "A modular scheduling optimization solver"
authors = ["Dev Team"]
packages = [{include = "solver", from = "src"}]

dependencies = [
    "email-validator>=2.2.0",
    "ortools>=9.7,<10.0",
    "psutil>=7.0.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "supabase>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "black>=23.0,<24.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.7,<2.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d",
    ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv"
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "D", "SIM", "TCH", "T20"
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D203", "D213",
    "T201",  # print statements - will be converted to logging in future refactor
]
unfixable = ["T20", "F841"]
per-file-ignores = { "tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "D107"] }

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["chr", "typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ortools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "supabase.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
