[project]
name = "modular-solver"
version = "0.1.0"
description = "A modular scheduling optimization solver"
authors = [{ name = "Dev Team" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.116.1",
    "psutil>=7.0.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]

[tool.poetry]
name = "modular-solver"
version = "0.1.0"
description = "A modular scheduling optimization solver"
authors = ["Dev Team"]
packages = [{include = "solver", from = "src"}]

dependencies = [
    "email-validator>=2.2.0",
    "ortools>=9.7,<10.0",
    "psutil>=7.0.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "supabase>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "black>=23.0,<24.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.7,<2.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d",
    ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv", ".claude"
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG001", "ARG002", "ARG003", "ARG004", "ARG005", "D", "SIM", "TCH", "T20"
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D205", "D213", "D400", "D401", "D415",
    "T201",  # print statements - will be converted to logging in future refactor
    "E501",  # Line too long - many are SQL, URLs, complex expressions
    "E402",  # Module import not at top - some conditional imports
    "W291",  # Trailing whitespace - handled by formatters
    "W293",  # Blank line with whitespace
    "F841",  # Unused variable - some for debugging/logging
    "ARG001", # Unused function argument - compatibility
    "SIM102", # Collapsible if - sometimes clearer separate
    "SIM103", # Needless bool - sometimes clearer
    "B007",  # Unused loop variable - some for counting
    "B904",  # Raise without from - some exception styles
    "E722",  # Bare except - some legacy handling
    "UP038", # isinstance union - backward compatibility
]
unfixable = ["T20", "F841"]
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "D107"]
"gui/**/*" = ["D107", "D205", "D401", "E501"]
"scripts/**/*" = ["D107", "D205", "D401", "E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["chr", "typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.rest.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ortools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "supabase.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
